--- a/css/styles.css
+++ b/css/styles.css
@@ -7,15 +7,15 @@
 * {
   margin: 0;
   padding: 0;
-  max-width: 1000px;
   box-sizing: border-box;
   font-family: var(--font-family);
   font-size: 10px;
   font-weight: 100;
 }
 
-body{
+boby{
     position: absolute;
+    top: 5rem;
 }
 
 .container {
@@ -23,6 +23,8 @@ body{
   height: 5rem;
   display: flex;
   position: fixed;
+  top: 0;
+  left: 0;
   background-color:#FFFFFF;
   z-index: 1;
 }
@@ -84,7 +86,7 @@ body{
 }
 
 .container__main{
-    position: relative;
+    /* position: relative; */
     margin-top: 5rem;
     width: 100%;
     height: 100vh;
@@ -184,7 +186,7 @@ body{
     display:flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    /* position: relative; */
 }
 
 .videobook ul{
@@ -249,14 +251,9 @@ body{
     overflow: hidden;
 }
 
-.gallery__image{
-    width: 100%;
-    text-align: start;
-}
-
 .gallery__item img{
     width: 100%;
-    height: 40vh;
+    height: 50vh;
     vertical-align: top;
     object-fit: cover;
     cursor: pointer;
@@ -273,7 +270,7 @@ body{
     overflow: hidden;
 }
 
-.gallery__title{
+/* .gallery__title{
     width: 100%;
     position: absolute;
     bottom: 1rem;
@@ -297,7 +294,7 @@ body{
 .gallery__title a>i:hover{
     font-size: 2.2rem;
     color: #FFFFFF;
-}
+} */
 
 .contact{
     width: 100%;
